--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "firebase": "^10.13.0",
     "lucide-react": "^0.263.1",
     "next": "^15.0.0",
+    "next-pwa": "^5.6.0",
     "pdfjs-dist": "^5.4.296",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.2.0",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.5"
